--- a/src/dashheader.css
+++ b/src/dashheader.css
@@ -1,227 +1,222 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.main{
-    width: 90%;
-    /* background-color: blue; */
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 100%;
+.main {
+  width: 90%;
+  /* background-color: blue; */
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 100%;
 }
 
 .carried {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    /* position: relative; */
-    width: 25%;
-    gap: 1rem;
-    left: 0%;
-    background-color: red;
-
+  height: 100%;
+  display: flex;
+  align-items: center;
+  /* position: relative; */
+  width: 25%;
+  gap: 1rem;
+  left: 0%;
+  background-color: red;
 }
 
-#menu{
-    position: relative;
+#menu {
+  position: relative;
 }
 
-.menuitem{
-    position: absolute;
-    background-color: white;
-    left: 80vw;
-    width: 20vw;
-    height: auto;
-    font-size: 7px;
-    line-height: 8px;
-    padding: 5px 10px;
-    border: solid 0.05px rgb(135, 137, 138);
-    top: 10vh;
+.menuitem {
+  position: absolute;
+  background-color: white;
+  left: 80vw;
+  width: 20vw;
+  height: auto;
+  font-size: 7px;
+  line-height: 8px;
+  padding: 5px 10px;
+  border: solid 0.05px rgb(135, 137, 138);
+  top: 10vh;
 }
 
 #header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1;
-  }
-
-.imageCon{
-    /* background-color: red; */
-    width: 10%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
 }
 
-.imageCon img{
-    width: 90%;
-    height: 100%;
-    justify-content: space-evenly;
+.imageCon {
+  /* background-color: red; */
+  width: 10%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.headers{
-    width: 100%;
-    background-color: white;
-    height: 13vh;
-    display: flex;
-    align-items: center;
-    padding: 0 20px 0 20px;
-    position: relative;
-    border-bottom: solid 1px rgb(223,228,231);
-    box-shadow: none;
-    justify-content: space-between;
+.imageCon img {
+  width: 90%;
+  height: 100%;
+  justify-content: space-evenly;
 }
 
-.logo{
-    width: 6%;
-    height: 45%;
+.headers {
+  width: 100%;
+  background-color: white;
+  height: 13vh;
+  display: flex;
+  align-items: center;
+  padding: 0 20px 0 20px;
+  position: relative;
+  border-bottom: solid 1px rgb(223, 228, 231);
+  box-shadow: none;
+  justify-content: space-between;
 }
 
-.dropDown{
-    /* background-color: aqua; */
-    height: 50%;
-    Font-size: 14px;
-    Font-weight: 400;   
-    Line-height: 19.6px;
+.logo {
+  width: 6%;
+  height: 95%;
 }
 
-.dropDownContent{
-    background-color: red;
-    margin-top: 30px;
-    display: none;
-    Font-size: 14px;
-    Font-weight: 400;   
-    Line-height: 19.6px;
-
+.dropDown {
+  /* background-color: aqua; */
+  height: 50%;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19.6px;
 }
 
-.cart{
-    /* background-color: red; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.dropDownContent {
+  background-color: red;
+  margin-top: 30px;
+  display: none;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19.6px;
 }
 
-.cart1{
-    /* background-color: red; */
-    font-size: 5px;
-    font-weight: 400;
-    display: flex;
-    align-items: center;
-    gap: 3px;
-    /* justify-content: center; */
+.cart {
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.cart1 span{
-    /* background-color: red; */
-    font-size: 10px;
-    font-weight: 400;
-    /* justify-content: center; */
+.cart1 {
+  /* background-color: red; */
+  font-size: 5px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  /* justify-content: center; */
 }
 
-.search{
-    width: 40%;
-    padding-left: 10px;
-    height: 65%;
-    background-color: rgb(247,249,250);
-    border-radius: 30px;
-    border: solid 1.3px rgb(98,100,102);
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+.cart1 span {
+  /* background-color: red; */
+  font-size: 10px;
+  font-weight: 400;
+  /* justify-content: center; */
 }
 
-.search input{
-    width: 85%;
-    height: 100%;
-    background-color: rgba(255, 0, 0, 0);
-    border: none;
-    border-radius: 20px;
-    outline: none;
+.search {
+  width: 40%;
+  padding-left: 10px;
+  height: 65%;
+  background-color: rgb(247, 249, 250);
+  border-radius: 30px;
+  border: solid 1.3px rgb(98, 100, 102);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-#searchLogo{
-    color: grey;
-    font-size: 22px;
+.search input {
+  width: 85%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0);
+  border: none;
+  border-radius: 20px;
+  outline: none;
 }
 
-.search ::placeholder{
-    Font-size: 13px;
-    Font-weight: 600;  
+#searchLogo {
+  color: grey;
+  font-size: 22px;
 }
 
-.buttonSignup{
-    width: 6%;
-    background-color: white;
-    height: 50%;
-    border: solid 1px black;
-    font-size: 14px;
-    font-weight: 600;
+.search ::placeholder {
+  font-size: 13px;
+  font-weight: 600;
 }
 
-.buttonLogin{
-    width: 6%;
-    background-color: black;
-    height: 50%;
-    border: solid 1px black;
-    color: white;
-    font-size: 14px;
-    font-weight: 600;
+.buttonSignup {
+  width: 6%;
+  background-color: white;
+  height: 50%;
+  border: solid 1px black;
+  font-size: 14px;
+  font-weight: 600;
 }
 
-.globeBox{
-    width: 3%;
-    background-color: white;
-    height: 50%;
-    border: solid 1px black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.buttonLogin {
+  width: 6%;
+  background-color: black;
+  height: 50%;
+  border: solid 1px black;
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
 }
 
-.round{
-    width: 3vw;
-    background-color: white;
-    height: 3vw;
-    border: solid 1px black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100%;
-    background-color: black;
-    color: white;
-    
+.globeBox {
+  width: 3%;
+  background-color: white;
+  height: 50%;
+  border: solid 1px black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.round {
+  width: 3vw;
+  background-color: white;
+  height: 3vw;
+  border: solid 1px black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  background-color: black;
+  color: white;
 }
 
 @media (max-width: 768px) {
-    .main {
-      display: none;
-    }
-
-           .headers{
-               /* Just for testing, change color */
-               height: 10vh;
-               /* Reduce header height for smaller screens */
-               padding: 0 10px;
-               
-           }
-
-    .imageCon{
-        /* background-color: red; */
-        width: 30%;
-    }
-
-  
-    .menu {
-      display: block;
-    }
-
-    .headers{
-        height: 10vh;
-    }
+  .main {
+    display: none;
   }
+
+  .headers {
+    /* Just for testing, change color */
+    height: 10vh;
+    /* Reduce header height for smaller screens */
+    padding: 0 10px;
+  }
+
+  .imageCon {
+    /* background-color: red; */
+    width: 30%;
+  }
+
+  .menu {
+    display: block;
+  }
+
+  .headers {
+    height: 10vh;
+  }
+}
