--- a/src/dashheader.css
+++ b/src/dashheader.css
@@ -21,6 +21,12 @@
   gap: 1rem;
   left: 0%;
   background-color: red;
+  padding: 0;
+}
+
+.carried p {
+  padding: 0;
+  cursor: pointer;
 }
 
 #menu {
